navbar alignment fix

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,4 +6,5 @@ footer {
 .react-icon {
     font-size: 30px;
     align-self: center;
+    color: white;
 }
